# vevtor

./: Cargo.toml  LICENSE  README.md
docker/: docker-compose.yml
indexable_macro/: Cargo.toml
indexable_macro/src/: lib.rs  traits.rs
src/: lib.rs  main.rs
src/db/: api.rs
src/db/builders/: with_collection.rs
src/file_indexer_api/: mod.rs  service.rs
src/file_indexer_api/infrastructure/: db_manager.rs  index_worker.rs
src/file_indexer_api/models/: file_model.rs  mod.rs
src/file_indexer_api/util/: hashing.rs  mod.rs  vec.rs
src/indexer_api/: mod.rs  service.rs
src/indexer_api/infrastructure/: db_manager.rs  index_worker.rs  indexer.rs  mod.rs
src/indexer_api/traits/: indexable.rs
src/tests/: file_model.rs  mod.rs  search_test.rs
src/vector_db/db/: api.rs
src/vevtor/db/builders/: with_collection.rs
tests/: Cargo.toml
tests/src/: file_model.rs  main.rs  search_test.rs
