[package]
name = "vevtor"
version = "0.1.0"
authors = ["Grayson Rieger graysonr12@icloud.com"]
edition = "2021"
license = "MIT" 
description = "vector index"
repository = "https://github.com/graysonrie/vevtor"

[dependencies]
fastembed = "4.0.0"
qdrant-client = "1.12.1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
tonic = "0.12.3"
twox-hash = "2.0.1"
indexable_macro = "0.1.0"