[package]
name = "indexable_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twox-hash = "2.0.1"
qdrant-client = "1.12.1"

[lib]
proc-macro = true